--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,8 +22,24 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Additional recommended rules
+    prefer_const_constructors: true
+    prefer_const_literals_to_create_immutables: true
+    avoid_print: true
+    always_declare_return_types: true
+    avoid_unnecessary_containers: true
+    prefer_final_locals: true
+    prefer_single_quotes: true
+    sort_constructors_first: true
+    unnecessary_this: true
+    use_key_in_widget_constructors: true
+
+analyzer:
+  exclude:
+    - build/**
+    - .dart_tool/**
+    - .pub/**
+    - "**/*.g.dart"
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
