--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.19.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   dio: ^5.9.0
   dart_either: ^2.0.0
+  flutter_riverpod: ^3.0.1
 
   cupertino_icons: ^1.0.2
 
@@ -22,6 +23,7 @@ dev_dependencies:
 
 
   flutter_lints: ^1.0.0
+  riverpod_lint: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
