--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   dio: ^5.9.0
   dart_either: ^2.0.0
   flutter_riverpod: ^3.0.1
+  shared_preferences: ^2.5.3
+  connectivity_plus: ^6.0.5
 
   cupertino_icons: ^1.0.2
 
